Set font styles

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -3,5 +3,24 @@ html {
   background-color: black;
   color: white;
   text-align: center;
-  
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
+}
+
+.link {
+  color: Aquamarine;
+  font-size: 16px;
 }
