--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -20,12 +20,12 @@ p {
   color: gray;
 }
 
-.link {
+a {
   color: Aquamarine;
   font-size: 16px;
 }
 
-.footer {
+#footer {
   text-align: right;
   color: gray;
 }
